# UART_Driver_Rust

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs  uart_h.rs
